--- a/render.yaml
+++ b/render.yaml
@@ -1,31 +1,33 @@
-services:A Docker web service
-type: web
-name: Deploy
-env: docker
-repo: https://github.com/hh848/Alist-on-PaaS.git # optional 原来的是alist-org/alist-render vs Dcklin/alist-render 不能用
-region: singapore # optional (defaults to oregon)
-plan: free # optional (defaults to starter)
-healthCheckPath: /
-envVars:
-key: PORT
-value: 5244
-key: DB_TYPE
-value: mysql
-key: DB_HOST
-value: db_host
-sync: false
-key: DB_PORT
-value: 3306
-key: DB_USER
-value: db_user
-sync: false
-key: DB_PASS
-value: db_password
-sync: false
-key: DB_NAME
-value: alist
-sync: false
-key: DB_TABLE_PREFIX
-value: alist_
-key: CDN
-value: https://npm.elemecdn.com/alist-web@$version/dist
+services:
+  - type: web
+    name: Deploy
+    env: docker
+    repo: https://github.com/hh848/Alist-on-PaaS.git  # 请替换为您的仓库地址
+    region: singapore
+    plan: free
+    healthCheckPath: /
+    envVars:
+      - key: PORT
+        value: 5244
+      - key: DB_TYPE
+        value: mysql
+      - key: DB_HOST
+        value: db_host
+        sync: false
+      - key: DB_PORT
+        value: "3306"  # 数值建议用引号包裹
+      - key: DB_USER
+        value: db_user
+        sync: false
+      - key: DB_PASS
+        value: db_password
+        sync: false
+      - key: DB_NAME
+        value: alist
+        sync: false
+      - key: DB_TABLE_PREFIX
+        value: alist_
+      - key: CDN
+        value: https://npm.elemecdn.com/alist-web@$version/dist
+    build:
+      dockerfile: Dockerfile  # 需要添加 Dockerfile 路径
