--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     healthCheckPath: /
     envVars:
       - key: PORT
-        value: "3000"
+        value: 5244
       - key: DB_TYPE
         value: postgres
       - key: DB_HOST
